fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 @tailwind base;
